# meowstro

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.default.json  DEPENDENCIES.md  LICENSE  README.md  TEST_RUNNERS.md  build.default.bat  build.default.ps1  build.default.sh  config.default.json  generate_cmake_presets.py  old_game_loop.md  test.bat  test.default.bat  test.default.ps1  test.default.sh  test.ps1  test.sh  vcpkg.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
aseperite-imgs/: boat.aseprite  d-fish.aseprite  hook.aseprite
aseperite-imgs/backgrounds/: Ocean.aseprite
aseperite-imgs/blue-fish/: fish-1.aseprite  fish-2.aseprite  fish-3.aseprite
aseperite-imgs/cats/: fisher.aseprite  menu_cat.aseprite  select_cat.aseprite
aseperite-imgs/gold-fish/: fish-1.aseprite  fish-2.aseprite  fish-3.aseprite
aseperite-imgs/green-fish/: fish-1.aseprite  fish-2.aseprite  fish-3.aseprite
assets/fonts/: Font.cpp
assets/images/: d-fish.aseprite
cmake/: copy_if_exists.cmake
docs/: API_documentation.md  design_notes.md  how_to_play.md
include/: AnimationSystem.hpp  Audio.hpp  AudioLogic.hpp  Entity.hpp  Exceptions.hpp  Font.hpp  GameConfig.hpp  GameStateManager.hpp  GameStats.hpp  InputHandler.hpp  Level.hpp  Logger.hpp  MenuSystem.hpp  RenderWindow.hpp  ResourceManager.hpp  RhythmGame.hpp  SDLTexture.hpp  Sprite.hpp
src/: AnimationSystem.cpp  Audio.cpp  AudioLogic.cpp  Entity.cpp  Font.cpp  GameConfig.cpp  GameStateManager.cpp  GameStats.cpp  InputHandler.cpp  Level.cpp  Logger.cpp  MenuSystem.cpp  RenderWindow.cpp  ResourceManager.cpp  RhythmGame.cpp  Sprite.cpp  game.cpp  meowstro.cpp
tests/unit/: test_AssetLoading.cpp  test_Entity.cpp  test_GameConfig.cpp  test_GameStats.cpp  test_InputHandler.cpp  test_Logger.cpp  test_ResourceManager.cpp  test_Sprite.cpp
